<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
      android:background="@drawable/crybg"
    android:scaleType = "centerCrop"
    android:visibility="visible" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:enabled="true" />

    <TextView
        android:id="@+id/asd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fileName"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/fileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tempsave"
        android:inputType="textPersonName"
        android:textStyle="italic" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/saveButton" />

    <Button
        android:id="@+id/closeButton"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:onClick="actClose"
        android:text="@string/close" />

</LinearLayout>
