<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/crybg"
    android:scaleType = "centerCrop"
    android:orientation="vertical" >

    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="true"
                        android:height="50dp" />

                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_weight="0.96"
                        android:background="@drawable/boxlines"
                        android:ems="10"
                        android:hint="@string/tempen"
                        android:scrollHorizontally="true"
                        android:scrollbars="vertical"
                        android:selectAllOnFocus="true"
                        android:textStyle="italic" >

                        <requestFocus />
                    </EditText>

                    <Button
                        android:id="@+id/enButton"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="startEncrypt"
                        android:text="@string/encrypt" />

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_weight="1.25"
                        android:background="@drawable/boxlines"
                        android:ems="10"
                        android:hint="@string/tempenOut"
                        android:scrollHorizontally="true"
                        android:textStyle="italic" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textViewPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="true" />

                    <EditText
                        android:id="@+id/passwordBox"
                        android:layout_width="wrap_content"
                        android:inputType="textPassword"
                        android:textStyle="italic" 
                        android:layout_height="wrap_content"
                        android:enabled="true"/>

                     <EditText
                        android:id="@+id/editText1D"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_weight="0.96"
                        android:background="@drawable/boxlines"
                        android:ems="10"
                        android:hint="@string/tempde"
                        android:scrollHorizontally="true"
                        android:scrollbars="vertical"
                        android:selectAllOnFocus="true"
                        android:textStyle="italic" >

                        <requestFocus />
                    </EditText>

                    <Button
                        android:id="@+id/deButton"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/decrypt" />

                    <EditText
                        android:id="@+id/editText2D"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_weight="1.25"
                        android:background="@drawable/boxlines"
                        android:ems="10"
                        android:hint="@string/tempdeOut"
                        android:scrollHorizontally="true"
                        android:textStyle="italic" />

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>